bug 173067: Fix unterminated character class error messages to use flat (single byte) strings instead of wide ones, so that the whole class is output, and not just the first character. r+a=brendan